instability of the Pages menuitem is fixed (collapsed)

--- a/components/layout/aside/aside.scss
+++ b/components/layout/aside/aside.scss
@@ -20,7 +20,7 @@
     width: 100%;
     .submenu-skeleton-content .submenu-skeleton-paragraph > li {
         width: 100%;
-        height: 16px;
+        height: 30px;
         list-style: none;
         background: -webkit-gradient(linear, left top, right top, color-stop(25%, #1f4161), color-stop(37%, #002140), color-stop(63%, #1f4161));
         background: linear-gradient(90deg, #1f4161 25%, #002140 37%, #1f4161 63%);
